# django-managed-commands

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_managed_commands/: __init__.py  admin.py  apps.py  base.py  models.py  utils.py
django_managed_commands/management/commands/: create_managed_command.py
django_managed_commands/migrations/: 0001_initial.py
django_managed_commands/templates/: command_template.py.txt  test_template.py.txt
tests/: __init__.py  settings.py  test_command_generation.py  test_command_tracking.py  test_models.py  test_utils.py
